# TechGuyCheckm8

./: Cargo.toml  README.md  checksums.txt
.github/workflows/: add-purple-env-tests-once.yml  apple-lab-contracts.yml  authorized-apple-lab.yml  autoformat-once.yml  autoformat-purple-once.yml  format-apple-route-once.yml  format-gaster-ramdisk-once.yml  format-phase5h.yml  foundation-proof.yml  patch-boot-test-import-once.yml  patch-clippy-ramdisk-boot-once.yml  patch-format-ramdisk-boot-once.yml  patch-phase5h-clippy.yml  patch-probe-hash-once.yml  patch-purple-env-once.yml  patch-purple-msrv-once.yml  patch-purple-shadow-once.yml  patch-usbliter8-evidence-once.yml  reviewed-apple-tools-build.yml  reviewed-apple-tools-intel-build.yml
a4/: config.json
a4/scripts/: run_a4_linux.sh  run_a4_mac.sh  run_a4_win.bat
a5/: config.json
a6/: config.json
a6/scripts/: run_a6_linux.sh  run_a6_mac.sh  run_a6_win.bat
a7_a11/: config.json
a7_a11/scripts/: run_a7_a11_linux.sh  run_a7_a11_mac.sh  run_a7_a11_win.bat
build-receipts/: apple-tools-macos-arm64.SHA256SUMS  apple-tools-macos-arm64.json  apple-tools-macos-x86_64.SHA256SUMS  apple-tools-macos-x86_64.json
crates/tg-apple-observe/: Cargo.toml
crates/tg-apple-observe/src/: lib.rs
crates/tg-apple-observe/tests/: observation.rs
crates/tg-apple-probe/: Cargo.toml
crates/tg-apple-probe/src/: lib.rs
crates/tg-apple-probe/tests/: manifest.rs  probe.rs
crates/tg-apple-route-reference/: Cargo.toml  README.md
crates/tg-apple-route-reference/src/: lib.rs
crates/tg-apple-route-reference/tests/: route_reference.rs
crates/tg-cli/: Cargo.toml
crates/tg-cli/src/: lib.rs  main.rs
crates/tg-cli/tests/: cli.rs
crates/tg-contracts/: Cargo.toml
crates/tg-contracts/src/: lib.rs
crates/tg-controller/: Cargo.toml
crates/tg-controller/src/: lib.rs
crates/tg-controller/tests/: planning.rs
crates/tg-evidence/: Cargo.toml
crates/tg-gaster-provider/: Cargo.toml  README.md
crates/tg-gaster-provider/src/: lib.rs
crates/tg-gaster-provider/tests/: provider.rs  research_manifest.rs
crates/tg-gateway/: Cargo.toml
crates/tg-gateway/src/: lib.rs
crates/tg-gateway/tests/: audit_flow.rs  gateway.rs
crates/tg-journal/: Cargo.toml
crates/tg-leases/: Cargo.toml
crates/tg-policy/: Cargo.toml
crates/tg-process/: Cargo.toml
crates/tg-process/src/: lib.rs
crates/tg-process/tests/: supervisor.rs
crates/tg-protocol/: Cargo.toml
crates/tg-purple/: Cargo.toml
crates/tg-purple-boot/: Cargo.toml
crates/tg-purple-boot/src/: lib.rs
crates/tg-purple-boot/tests/: manifest.rs  rollback.rs  route.rs
crates/tg-ramdisk-boot/: Cargo.toml  README.md
crates/tg-ramdisk-boot/src/: lib.rs
crates/tg-ramdisk-boot/tests/: boot.rs
crates/tg-ramdisk-pack/: Cargo.toml  README.md
crates/tg-ramdisk-pack/examples/: validate_manifest.rs
crates/tg-ramdisk-pack/src/: lib.rs
crates/tg-ramdisk-pack/tests/: pack.rs
crates/tg-router/: Cargo.toml
crates/tg-runtime/: Cargo.toml
crates/tg-serial-doctor/: Cargo.toml  README.md
crates/tg-serial-doctor/src/: lib.rs
crates/tg-serial-doctor/tests/: doctor_flow.rs  manifest_boundaries.rs
crates/tg-serial-platform/: Cargo.toml  README.md  THIRD_PARTY_NOTICES.md
crates/tg-serial-platform/src/: lib.rs
crates/tg-serial-platform/tests/: platform_flow.rs
crates/tg-session/: Cargo.toml
crates/tg-simulator/: Cargo.toml
crates/tg-simulator/src/: lib.rs
crates/tg-simulator/tests/: runtime_flow.rs  scenarios.rs
crates/tg-syscfg-backup-vault/: Cargo.toml  README.md
crates/tg-syscfg-backup-vault/src/: envelope.rs  key.rs  lib.rs  pipeline.rs  store.rs
crates/tg-syscfg-backup-vault/tests/: backup_flow.rs
crates/tg-syscfg-read-transport/: Cargo.toml  README.md
crates/tg-syscfg-read-transport/src/: lib.rs
crates/tg-syscfg-read-transport/tests/: read_flow.rs
crates/tg-syscfg-serial/: Cargo.toml
crates/tg-syscfg-serial/src/: lib.rs
crates/tg-syscfg-serial/tests/: boundaries.rs  serial.rs
crates/tg-syscfg-write-transport/: Cargo.toml  README.md
crates/tg-syscfg-write-transport/src/: lib.rs  pipeline.rs  transport.rs
crates/tg-syscfg-write-transport/tests/: transport_policy.rs  write_flow.rs
crates/tg-usbliter8/: Cargo.toml
crates/tg-usbliter8/src/: lib.rs
crates/tg-usbliter8/tests/: manifest.rs  node.rs
crates/tg-worker/: Cargo.toml
docs/: 00-RESEARCH-LOCK.md  01-SYSTEM-ARCHITECTURE.md  02-SECURITY-PERMISSIONS-AND-EXCLUSIONS.md  03-CAPABILITY-AND-PROVENANCE-MATRIX.md  04-EVIDENCE-RECOVERY-AND-RELEASE.md  05-PHASE-1-CONTROLLER.md  06-PHASE-2-WORKER-RUNTIME.md  07-PHASE-3-GATEWAY-PROCESS-JOURNAL.md  08-PURPLE-SERVICE-CONTRACTS.md  09-APPLE-OBSERVATION-IDENTITY.md  10-READ-ONLY-APPLE-PROBES.md  11-USBLITER8-RP2350-NODE.md  12-A12-A13-PURPLE-BOOT-ROUTE.md  13-PURPLE-ENVIRONMENT-ROLLBACK.md  ARCHITECTURE_BRANCH_NOTICE.md  FOUNDATION_START.md  apple-known-good-route-reference.md  branch-plan.txt  device_matrix.md  serial-doctor.md  serial-platform.md  syscfg-backup-vault.md  syscfg-read-transport.md  syscfg-selected-write.md  usage.md
docs/architecture/: syscfg-serial-provider.md
docs/evidence/: syscfg-serial-hardware-promotion.md
docs/research/: apple-10-for-2-source-matrix.md  reviewed-apple-tools-and-authorised-lab-v1.md
fixtures/apple/: usbliter8-a12-pwnd-to-purple.synthetic.json
licenses/: arduino-cli.LICENSE  libimobiledevice.LICENSE  libirecovery.LICENSE
manifests/engines/: usbliter8-rp2350.research.json
manifests/probes/: irecovery-dfu-query.research.json
manifests/purple/: README.md  usbliter8-rp2350.research.json
providers/serial/: serialport-4.9.0.json
providers/syscfg-serial/: README.md  magiccfg-research.json
scripts/: make_checksums.py  pack_release_zip.ps1  pack_release_zip.sh  phase5e_serial_reservation_patch.py
tools/: apply_techguy_db_patch.py  doctor.py  merge_models.py  resync_unlock_models.py
tools/apple-build/: README.md  make_receipt.py  persist_receipt.py
tools/apple-lab/: README.md  execute_exact_sequence.sh  make_provider_manifest.py  patch_sshrd.py  prepare_exact_sshrd.sh  verify_device.py
(+26 files in other folders)
