[workspace]
members = [
    "crates/tg-contracts",
    "crates/tg-session",
    "crates/tg-policy",
    "crates/tg-router",
    "crates/tg-evidence",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.80"
authors = ["THETECHGUY DIGITAL SOLUTIONS"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["serde", "v4"] }
tg-contracts = { path = "crates/tg-contracts" }
