[workspace]
members = [
    "crates/tg-contracts",
    "crates/tg-session",
    "crates/tg-policy",
    "crates/tg-router",
    "crates/tg-evidence",
    "crates/tg-controller",
    "crates/tg-protocol",
    "crates/tg-worker",
    "crates/tg-leases",
    "crates/tg-runtime",
    "crates/tg-simulator",
    "crates/tg-gateway",
    "crates/tg-process",
    "crates/tg-journal",
    "crates/tg-cli",
    "crates/tg-purple",
    "crates/tg-apple-observe",
    "crates/tg-apple-probe",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.80"
authors = ["THETECHGUY DIGITAL SOLUTIONS"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
uuid = { version = "1", features = ["serde", "v4"] }
tg-contracts = { path = "crates/tg-contracts" }
