[package]
name = "tg-controller"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
tg-contracts.workspace = true
tg-policy = { path = "../tg-policy" }
tg-router = { path = "../tg-router" }
tg-session = { path = "../tg-session" }
