[package]
name = "tg-ramdisk-pack"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
serde.workspace = true
sha2.workspace = true
thiserror.workspace = true
tg-contracts.workspace = true
tg-apple-route-reference = { path = "../tg-apple-route-reference" }

[dev-dependencies]
serde_json.workspace = true
