[package]
name = "tg-serial-platform"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
serialport.workspace = true
serde.workspace = true
thiserror.workspace = true
uuid.workspace = true
tg-leases = { path = "../tg-leases" }
tg-serial-doctor = { path = "../tg-serial-doctor" }

[dev-dependencies]
serde_json.workspace = true
