[package]
name = "tg-simulator"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
tg-contracts.workspace = true
tg-evidence = { path = "../tg-evidence" }
serde.workspace = true
uuid.workspace = true

[dev-dependencies]
tg-leases = { path = "../tg-leases" }
tg-protocol = { path = "../tg-protocol" }
tg-runtime = { path = "../tg-runtime" }
tg-worker = { path = "../tg-worker" }
