[package]
name = "tg-syscfg-backup-vault"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
chacha20poly1305.workspace = true
getrandom.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
uuid.workspace = true
zeroize.workspace = true
tg-purple = { path = "../tg-purple" }
tg-syscfg-read-transport = { path = "../tg-syscfg-read-transport" }
tg-syscfg-serial = { path = "../tg-syscfg-serial" }
