[package]
name = "tg-syscfg-serial"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
serde.workspace = true
sha2.workspace = true
thiserror.workspace = true
uuid.workspace = true
tg-contracts.workspace = true
tg-purple = { path = "../tg-purple" }
tg-purple-boot = { path = "../tg-purple-boot" }

[dev-dependencies]
serde_json.workspace = true
